# telegram-casino-bot

./: .dockerignore  .env_dist  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  README.ru.md  bot.py  casino-bot.example.service  casino.py  const.py  docker-compose.example.yml  docker-compose.yml  env_example  pyproject.toml  requirements.txt  settings.example.toml  throttling.py
bot/: __main__.py  casino.py  config_reader.py  const.py  dice_check.py  fluent_loader.py  keyboards.py  logs.py  throttling.py  ui_commands.py
bot/filters/: __init__.py  spin_text_filter.py
bot/handlers/: default_commands.py  spin.py
bot/locale/current/: README.md
bot/locale/example/: README.md  README.ru.md
bot/locale/example/en/: strings.ftl
bot/locale/example/ru/: strings.ftl
bot/locales/example/: README.md  README.ru.md  strings_example_ru.ftl
bot/middlewares/: throttling.py
redis-data/: .gitkeep
redis_build/: Dockerfile  redis.default.conf
